Avoid checkbox label wrapping as they become unreadable

--- a/app/assets/stylesheets/ui_components/checkbox_list.scss
+++ b/app/assets/stylesheets/ui_components/checkbox_list.scss
@@ -1,5 +1,6 @@
 .ui-components-checkbox-list {
   list-style: none;
+  white-space: nowrap;
   padding-left: 0;
 
   &.two-columns {
